@@ -70,7 +70,7 @@ Window types are in +WINDOW-TYPES+.")
 	 ,@body)
      ((or xlib:match-error xlib:window-error xlib:drawable-error) (c)
        (declare (ignore c)))))
-       ;;(dbg c ',body))))
+      ;;(dbg c ',body))))
 
 
 
