@@ -1,3 +1,9 @@
+2009-07-29  Philippe Brochard  <pbrochard@common-lisp.net>
+
+	* src/clfswm-layout.lisp (tile-layout, tile-horizontal-layout):
+	Keep child order and don't make unnecessary child movement.
+	(one-column-layout, one-line-layout): New layouts.
+
 2009-06-29  Philippe Brochard  <pbrochard@common-lisp.net>
 
 	* contrib/cd-player.lisp: New file to handle the CD player.
